Add submission directions

--- a/ppm_parsing/handout/handout.tex
+++ b/ppm_parsing/handout/handout.tex
@@ -133,4 +133,10 @@ To test your code you can use the provided PPM files, as well as writing your ow
 
 Additionally, we've incorporated some of the testing features in rustc/Cargo so you can automatically test your code on the provided files. Running \texttt{cargo test} will run these tests, which you can see at the bottom of \texttt{src/main.rs}.
 
+\section*{Submitting}
+
+Submission will be on Gradescope. If you aren't in gradescope, message us in Discord or via email at \href{mailto:rust-stuco-staff@lists.andrew.cmu.edu}{\texttt{rust-stuco-staff@lists.andrew.cmu.edu}}.
+
+You should submit a zip file containing the whole crate rooted at the directory where Cargo.toml appears (e.g., run \texttt{zip submission.zip Cargo.toml src/*}) and upload that.
+
 \end{document}
